ME_4600/MESDK/ME-4000/VC/me4000dll.h



/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                             ME4000 Interface                                  |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                         Board Independant Routines                            |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               Error Routines                                  |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000ErrorSetDefaultProc(
    int iDefaultProcStatus);


int _declspec(dllexport) me4000ErrorSetUserProc(
    ME4000_P_ERROR_PROC pErrorProc);


int _declspec(dllexport) me4000ErrorGetMessage(
    int iErrorCode,
    char* pcBuffer,
    unsigned int uiBufferSize);


int _declspec(dllexport) me4000ErrorGetLastMessage(
    char* pcBuffer,
    unsigned int uiBufferSize);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               Version Routines                                |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000GetDLLVersion(
    unsigned long* pulVersion);


int _declspec(dllexport) me4000GetDriverVersion(
    unsigned long* pulVersion);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               Utility Routines                                |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000FrequencyToTicks(
    double dRequiredFreq,
    unsigned long* pulTicksLowPart,
    unsigned long* pulTicksHighPart,
    double* pdAchievedFreq);


int _declspec(dllexport) me4000TimeToTicks(
    double dRequiredTime,
    unsigned long* pulTicksLowPart,
    unsigned long* pulTicksHighPart,
    double* pdAchievedTime);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                         Board Specific Routines                               |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                            General Routines                                   |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000GetBoardVersion(
    unsigned int uiBoardNumber,
    unsigned short* pusVersion);


int _declspec(dllexport) me4000GetSerialNumber(
    unsigned int uiBoardNumber,
    unsigned long* pulSerialNumber);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               AI Routines                                     |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000AISingle(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iRange,
    int iSDMode,
    int iTriggerMode,
    int iExtTriggerEdge,
    unsigned long ulTimeOutSeconds,
    short* psDigitalValue);


int _declspec(dllexport) me4000AIMakeChannelListEntry(
    unsigned int uiChannelNumber,
    int iRange,
    unsigned char* pucChanListEntry);


int _declspec(dllexport) me4000AIConfig(
    unsigned int uiBoardNumber,
    unsigned char* pucChanList,
    unsigned int uiChanListCount,
    int iSDMode,
    int iSimultaneous,
    unsigned long ulReserved,
    unsigned long ulChanTicks,
    unsigned long ulScanTicksLow,
    unsigned long ulScanTicksHigh,
    int iAcqMode,
    int iExtTriggerMode,
    int iExtTriggerEdge);


int _declspec(dllexport) me4000AIScan(
    unsigned int uiBoardNumber,
    unsigned int uiNumberOfChanLists,
    short* psBuffer,
    unsigned long ulBufferSizeValues,
    int iExecutionMode,
    ME4000_P_AI_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned int uiRefreshFrequency,
    ME4000_P_AI_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int _declspec(dllexport) me4000AIContinuous(
    unsigned int uiBoardNumber,
    ME4000_P_AI_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned int uiRefreshFrequency,
    unsigned long ulTimeOutSeconds);


int _declspec(dllexport) me4000AIStart(
    unsigned int uiBoardNumber);


int _declspec(dllexport) me4000AIGetNewValues(
    unsigned int uiBoardNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToRead,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesRead,
    int* piLastError);


int _declspec(dllexport) me4000AIStop(
    unsigned int uiBoardNumber,
    int iReserved);


int _declspec(dllexport) me4000AIExtractValues(
    unsigned int uiChannelNumber,
    short* psAIBuffer,
    unsigned long ulAIDataCount,
    unsigned char* pucChanList,
    unsigned int uiChanListCount,
    short* psChanBuffer,
    unsigned long ulChanBufferSizeValues,
    unsigned long* pulChanDataCount);


int _declspec(dllexport) me4000AIDigitToVolt(
    short sDigit,
    int iRange,
    double* pdVolt);


int _declspec(dllexport) me4000AIReset(
    unsigned int uiBoardNumber);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               AO Routines                                     |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000AOSingle(
	unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iTriggerMode,
    int iExtTriggerEdge,
    unsigned long ulTimeOutSeconds,
    short sValue	);


int _declspec(dllexport) me4000AOSingleSimultaneous(
	unsigned int uiBoardNumber,
	unsigned int* puiChannelNumber,
	unsigned long ulCount,
	int iTriggerMode,
	int* piExtTriggerEnable,
	int* piExtTriggerEdge,
	unsigned long ulTimeOutSeconds,
	short* psValue	);



// ----------------------------------------------------------------------------
// ----------------------------------------------------------------------------
// NOTE:	The following function is obsolete and is retained only for 
//			backward compatibility. It should no longer be used.
int _declspec(dllexport) me4000AOUpdate(
    unsigned int uiBoardNumber);

// ----------------------------------------------------------------------------
// ----------------------------------------------------------------------------

int _declspec(dllexport) me4000AOConfig(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    unsigned long ulTicks,
    int iTriggerMode,
    int iExtTriggerEdge);


int _declspec(dllexport) me4000AOWraparound(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    unsigned long ulLoops,
    int iExecutionMode,
    ME4000_P_AO_TERMINATE_PROC pTerminateProc,
    void* pTerminateContext,
    unsigned long ulTimeOutSeconds);


int _declspec(dllexport) me4000AOContinuous(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    short* psBuffer,
    unsigned long ulDataCount,
    ME4000_P_AO_CALLBACK_PROC pCallbackProc,
    void* pCallbackContext,
    unsigned long ulTimeOutSeconds,
    unsigned long* pulNumberOfValuesWritten);


int _declspec(dllexport) me4000AOStart(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber);


int _declspec(dllexport) me4000AOStartSynchronous(
	unsigned int uiBoardNumber,
	unsigned int* puiChannelNumber,
	unsigned long ulCount,
	int iTriggerMode,
	int* piExtTriggerEnable,
	int* piExtTriggerEdge,
	unsigned long ulTimeOutSeconds);


int _declspec(dllexport) me4000AOAppendNewValues(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    short* psBuffer,
    unsigned long ulNumberOfValuesToAppend,
    int iExecutionMode,
    unsigned long* pulNumberOfValuesAppended);


int _declspec(dllexport) me4000AOStop(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iStopMode);


int _declspec(dllexport) me4000AOVoltToDigit(
    double dVolt,
    short* psDigit);


int _declspec(dllexport) me4000AOReset(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber);


int _declspec(dllexport) me4000AOWaveGen(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iShape,
    double dAmplitude,
    double dOffset,
    double dFrequency);


int _declspec(dllexport) me4000AOGetStatus(
    unsigned int uiBoardNumber,
    unsigned int uiChannelNumber,
    int iWaitIdle,
    int* piStatus);


/*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               DIO Routines                                    |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*/

int _declspec(dllexport) me4000DIOConfig(
    unsigned int uiBoardNumber,
    unsigned int uiPortNumber,
    int iPortDirection);


int _declspec(dllexport) me4000DIOResetAll(
    unsigned int uiBoardNumber);