ME_4600/MESDK/ME-4000/BDelphi/me4000dll.pas

unit me4000dll;

interface

uses me4000defs;

{-------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               Version Routines                                |
|                                                                               |
|-------------------------------------------------------------------------------|
+-------------------------------------------------------------------------------}

function me4000GetDLLVersion(var pulVersion: LongWord): Integer;
  cdecl; external 'me4000.dll';

function me4000GetDriverVersion(var pulVersion: LongWord): Integer;
  cdecl; external 'me4000.dll';

{-------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               Utility Routines                                |
|                                                                               |
|-------------------------------------------------------------------------------|
+-------------------------------------------------------------------------------}

function me4000FrequencyToTicks(dRequiredFreq: Double;
  var pulTicksLowPart: LongWord; var pulTicksHighPart: LongWord;
  var pdAchievedFreq: Double): Integer; cdecl; external 'me4000.dll';

function me4000TimeToTicks(dRequiredTime: Double;
  var pulTicksLowPart: LongWord; var pulTicksHighPart: LongWord;
  var pdAchievedTime: Double): Integer; cdecl; external 'me4000.dll';


{-------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                         Board Specific Routines                               |
|                                                                               |
|-------------------------------------------------------------------------------|
+-------------------------------------------------------------------------------}

{-------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               Error Routines                                  |
|                                                                               |
|-------------------------------------------------------------------------------|
+-------------------------------------------------------------------------------}

function me4000ErrorSetDefaultProc(iDefaultProcStatus: Integer): Integer;
  cdecl; external 'me4000.dll';

function me4000ErrorSetUserProc(pErrorProc: TME4000_P_ERROR_PROC): Integer;
  cdecl; external 'me4000.dll';

function me4000ErrorGetMessage(iErrorCode: Integer;
  pcBuffer: PChar; uiBufferSize: Word): Integer; cdecl; external 'me4000.dll';

function me4000ErrorGetLastMessage(pcBuffer: PChar;
  uiBufferSize: Word): Integer; cdecl; external 'me4000.dll';


{-------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                            General Routines                                   |
|                                                                               |
|-------------------------------------------------------------------------------|
+-------------------------------------------------------------------------------}

function me4000GetBoardVersion(uiBoardNumber: Cardinal;
  var pusVersion: Word): Integer; cdecl; external 'me4000.dll';

function me4000GetSerialNumber(uiBoardNumber: Cardinal;
  var pulSerialNumber: LongWord): Integer; cdecl; external 'me4000.dll';

{-------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               AI Routines                                     |
|                                                                               |
|-------------------------------------------------------------------------------|
+-------------------------------------------------------------------------------}

function me4000AISingle(uiBoardNumber: Cardinal; uiChannelNumber: Cardinal;
  iRange: Integer; iSDMode: Integer; iTriggerMode: Integer;
  iExtTriggerEdge: Integer; ulTimeOutSeconds: LongWord;
  var psDigitalValue: Smallint): Integer; cdecl; external 'me4000.dll';

function me4000AIMakeChannelListEntry(uiChannelNumber: Cardinal; iRange: Integer;
  var pucChanListEntry: Byte): Integer; cdecl; external 'me4000.dll';

function me4000AIConfig(uiBoardNumber: Cardinal; pucChanList: PByte;
  uiChanListCount: Cardinal; iSDMode: Integer; iSimultaneous: Integer;
  ulReserved: LongWord; ulChanTicks: LongWord; ulScanTicksLow: LongWord;
  ulScanTicksHigh: LongWord; iAcqMode: Integer; iExtTriggerMode: Integer;
  iExtTriggerEdge: Integer): Integer; cdecl; external 'me4000.dll';

function me4000AIScan(uiBoardNumber: Cardinal; uiNumberOfChanLists: Cardinal;
  psBuffer: PSmallint; ulBufferSizeValues: LongWord;
  iExecutionMode: Integer; pCallbackProc: TME4000_P_AI_CALLBACK_PROC;
  pCallbackContext: Pointer; uiRefreshFrequency: Cardinal;
  pTerminateProc: TME4000_P_AI_TERMINATE_PROC; pTerminateContext: Pointer;
  ulTimeOutSeconds: LongWord): Integer; cdecl; external 'me4000.dll';

function me4000AIContinuous(uiBoardNumber: Cardinal;
  pCallbackProc: TME4000_P_AI_CALLBACK_PROC; pCallbackContext: Pointer;
  uiRefreshFrequency: Cardinal; ulTimeOutSeconds: LongWord): Integer;
  cdecl; external 'me4000.dll';

function me4000AIStart(uiBoardNumber: Cardinal): Integer;
  cdecl; external 'me4000.dll';

function me4000AIGetNewValues(uiBoardNumber: Cardinal;
  psBuffer: PSmallint; ulNumberOfValuesToRead: LongWord;
  iExecutionMode: Integer; var pulNumberOfValuesRead: LongWord;
  var piLastError: Integer): Integer; cdecl; external 'me4000.dll';

function me4000AIStop(uiBoardNumber: Cardinal;
  iReserved: Integer): Integer; cdecl; external 'me4000.dll';

function me4000AIExtractValues(uiChannelNumber: Cardinal;
  psAIBuffer: PSmallint; ulAIDataCount: LongWord; pucChanList: PByte;
  uiChanListCount: Cardinal; psChanBuffer: PSmallint;
  ulChanBufferSizeValues: LongWord; var pulChanDataCount: LongWord): Integer;
  cdecl; external 'me4000.dll';

function me4000AIDigitToVolt(sDigit: Smallint; iRange: Integer;
  var pdVolt: Double): Integer; cdecl; external 'me4000.dll';

function me4000AIReset(uiBoardNumber: Cardinal): Integer;
  cdecl; external 'me4000.dll';

{*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               AO Routines                                     |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*}

function me4000AOSingle(uiBoardNumber: Cardinal;
  uiChannelNumber: Cardinal; iTriggerMode: Integer;
  iExtTriggerEdge: Integer; ulTimeOutSeconds: LongWord;
  sValue: Smallint): Integer; cdecl; external 'me4000.dll';

function me4000AOSingleSimultaneous(uiBoardNumber: Cardinal;
  puiChannelNumber: PCardinal; ulCount: LongWord;
  iTriggerMode: Integer; piExtTriggerEnable: PInteger;
  piExtTriggerEdge: PInteger; ulTimeOutSeconds: LongWord;
  psValue: PSmallint): Integer; cdecl; external 'me4000.dll';

// ----------------------------------------------------------------------------
// ----------------------------------------------------------------------------
// NOTE:	The following function is obsolete and is retained only for
//		backward compatibility. It should no longer be used.
function me4000AOUpdate(uiBoardNumber: Cardinal): Integer;
  cdecl; external 'me4000.dll';
// ----------------------------------------------------------------------------
// ----------------------------------------------------------------------------

function me4000AOConfig(uiBoardNumber: Cardinal; uiChannelNumber: Cardinal;
  ulTicks: LongWord; iTriggerMode: Integer;
  iExtTriggerEdge: Integer): Integer; cdecl; external 'me4000.dll';

function me4000AOWraparound(uiBoardNumber: Cardinal; uiChannelNumber: Cardinal;
  psBuffer: PSmallint; ulDataCount: LongWord; ulLoops: LongWord;
  iExecutionMode: Integer; pTerminateProc: TME4000_P_AO_TERMINATE_PROC;
  pTerminateContext: Pointer; ulTimeOutSeconds: LongWord): Integer;
  cdecl; external 'me4000.dll';

function me4000AOContinuous(uiBoardNumber: Cardinal; uiChannelNumber: Cardinal;
  psBuffer: PSmallint; ulDataCount: LongWord;
  pCallbackProc: TME4000_P_AO_CALLBACK_PROC; pCallbackContext: Pointer;
  ulTimeOutSeconds: LongWord; var pulNumberOfValuesWritten: LongWord): Integer;
  cdecl; external 'me4000.dll';

function me4000AOStart(uiBoardNumber: Cardinal; uiChannelNumber: Cardinal):
  Integer; cdecl; external 'me4000.dll';

function me4000AOStartSynchronous(uiBoardNumber: Cardinal;
  puiChannelNumber: PCardinal; ulCount: LongWord;
  iTriggerMode: Integer; piExtTriggerEnable: PInteger;
  piExtTriggerEdge: PInteger; ulTimeOutSeconds: longWord): Integer;
  cdecl; external 'me4000.dll';

function me4000AOAppendNewValues(uiBoardNumber: Cardinal;
  uiChannelNumber: Cardinal; psBuffer: PSmallint;
  ulNumberOfValuesToAppend: LongWord; iExecutionMode: Integer;
  var pulNumberOfValuesAppended: LongWord): Integer;
  cdecl; external 'me4000.dll';

function me4000AOStop(uiBoardNumber: Cardinal; uiChannelNumber: Cardinal;
  iStopMode: Integer): Integer; cdecl; external 'me4000.dll';

function me4000AOVoltToDigit(dVolt: Double; var psDigit: Smallint): Integer;
  cdecl; external 'me4000.dll';

function me4000AOReset(uiBoardNumber: Cardinal; uiChannelNumber: Cardinal):
  Integer; cdecl; external 'me4000.dll';

function me4000AOWaveGen(uiBoardNumber: Cardinal; uiChannelNumber: Cardinal;
  iShape: Integer; dAmplitude: Double; dOffset: Double;
  dFrequency: Double): Integer; cdecl; external 'me4000.dll';

function me4000AOGetStatus(uiBoardNumber: Cardinal; uiChannelNumber: Cardinal;
  iWaitIdle: Integer; var piStatus: Integer): Integer;
  cdecl; external 'me4000.dll';

{*------------------------------------------------------------------------------+
|-------------------------------------------------------------------------------|
|                                                                               |
|                               DIO Routines                                    |
|                                                                               |
|-------------------------------------------------------------------------------|
+------------------------------------------------------------------------------*}

function me4000DIOConfig(uiBoardNumber: Cardinal; uiPortNumber: Cardinal;
  iPortDirection: Integer): Integer; cdecl; external 'me4000.dll';

function me4000DIOResetAll(uiBoardNumber: Cardinal): Integer;
  cdecl; external 'me4000.dll';
